<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@android:color/white"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/lbl_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_centerHorizontal="true"
        android:textSize="40sp"
        android:layout_marginTop="20dp"/>

    <EditText
        android:id="@+id/edt_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="2"
        android:hint="@string/email"
        android:layout_below="@+id/lbl_login"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginTop="70dp"/>

    <EditText
        android:id="@+id/edt_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edt_email"
        android:layout_marginTop="30dp"
        android:maxLines="2"
        android:hint="@string/password"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"/>

    <androidx.cardview.widget.CardView

        android:id="@+id/cardview_btn"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginTop="50dp"
        android:layout_below="@id/edt_password"
        android:layout_centerHorizontal="true"
        app:cardCornerRadius="20dp">

        <ImageButton
            android:id="@+id/img_btn_icon"
            android:layout_marginStart="50dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/ic_lock"
            android:layout_width="20dp"
            android:layout_height="20dp" />

        <TextView
            android:id="@+id/lbl_btn_edt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textColor="@color/colorPrimary"
            android:layout_marginStart="110dp"
            android:layout_marginTop="10dp"
            android:text="@string/login"/>


    </androidx.cardview.widget.CardView>
    
    <TextView
        android:id="@+id/lbl_acc_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in_message"
        android:textSize="18sp"
        android:layout_below="@id/cardview_btn"
        android:layout_marginTop="30dp"
        android:layout_marginStart="85dp"/>

    <TextView
        android:id="@+id/lbl_signUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:textSize="18sp"
        android:layout_marginStart="6dp"
        android:layout_toEndOf="@+id/lbl_acc_msg"
        android:layout_below="@id/cardview_btn"
        android:layout_marginTop="30dp"
        android:textColor="@color/colorPrimary"/>

    <View
        android:id="@+id/view_line"
        android:layout_width="150dp"
        android:layout_height="2dp"
        android:layout_marginStart="40dp"
        android:layout_below="@id/lbl_acc_msg"
        android:layout_marginTop="30dp"
        android:background="@android:color/black"/>

    <TextView
        android:id="@+id/lbl_or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lbl_signUp"
        android:layout_marginStart="10sp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10sp"
        android:layout_marginBottom="10sp"
        android:layout_toEndOf="@+id/view_line"
        android:text="@string/or"/>

    <View
        android:id="@+id/view_line2"
        android:layout_width="150dp"
        android:layout_toEndOf="@+id/lbl_or"
        android:layout_height="2dp"
        android:layout_below="@id/lbl_acc_msg"
        android:layout_marginTop="30dp"
        android:background="@android:color/black"/>


    <TextView
        android:id="@+id/lbl_signIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/view_line"
        android:layout_marginStart="90dp"
        android:layout_marginTop="30dp"
        android:text="@string/sign_in_with_sn"
        android:textSize="18sp"
        android:gravity="center"/>

    
    <androidx.cardview.widget.CardView

        android:layout_width="140dp"
        android:layout_height="40dp"
        app:cardCornerRadius="20dp"
        android:layout_below="@+id/lbl_signIn"
        android:layout_marginTop="30dp"
        android:layout_marginStart="50dp">

        <ImageButton
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/ic_blue"
            android:layout_marginTop="5dp"
            android:layout_marginStart="5dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/facebook"
            android:textSize="18sp"
            android:textColor="@color/colorPrimary"
            android:layout_marginTop="6dp"
            android:layout_marginStart="45dp"/>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView

            android:layout_width="140dp"
            android:layout_height="40dp"
            app:cardCornerRadius="20dp"
            android:layout_below="@+id/lbl_signIn"
            android:layout_marginTop="30dp"
            android:layout_marginStart="210dp">

        <ImageButton
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_below="@+id/lbl_signIn"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/ic_vpn"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/google"
            android:textSize="18sp"
            android:textColor="@color/colorPrimary"
            android:layout_marginTop="6dp"
            android:layout_marginStart="48dp"/>


    </androidx.cardview.widget.CardView>





</RelativeLayout>